intear-dex-management/tests/snapshots/xyk_writes__pool_edit_fees_by_account_other_than_owner.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"alice.near\",\n&[\"xyk\", \"pool\", \"edit-fees\", \"alice.near\", \"0\", \"pool=0.1%\"]).await"
---
$ near-intear-dex-management xyk pool edit-fees alice.near 0 'pool=0.1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk pool edit-fees alice.near 0 'pool=0.1%' network-config sandbox sign-with-plaintext-private-key ed25519:2wyRcSwSuHtRVmkMCGjPwnzZmQLeXLzLLyED1NDMt4BjnKgQL6tF85yBx6Jr26D2dUNeC716RBoTxntVHsegogYw send

Error:
   0: Pool #0 of slimedragon.near/xyk is owned by slimedragon.near, and alice.near signed

Suggestion: Sign with slimedragon.near
