intear-dex-management/tests/snapshots/xyk_writes__pool_edit_fees_with_schedule_of_old_pool.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"pool\", \"edit-fees\", \"slimedragon.near\", \"0\",\n\"pool=0.3%..0.2%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z\"]).await"
---
$ near-intear-dex-management xyk pool edit-fees slimedragon.near 0 'pool=0.3%..0.2%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk pool edit-fees slimedragon.near 0 'pool=0.3%..0.2%@2100-01-01T00:00:00Z..2100-07-01T00:00:00Z' network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: Pool #0 of slimedragon.near/xyk is of an old version, which only takes fixed fees

Suggestion: Upgrade it first, which anyone can:
    near intear-dex-management xyk --dex slimedragon.near/xyk pool upgrade slimedragon.near 0 network-config sandbox
