intear-dex-management/tests/snapshots/xyk_writes__pool_lock_of_public_pool.snap
---
source: intear-dex-management/tests/xyk_writes.rs
expression: "cli.transaction(\"slimedragon.near\",\n&[\"xyk\", \"pool\", \"lock\", \"slimedragon.near\", \"2\"]).await"
---
$ near-intear-dex-management xyk pool lock slimedragon.near 2 network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk pool lock slimedragon.near 2 network-config sandbox sign-with-plaintext-private-key ed25519:3Jr44c7TzFcexmD2nYX7qD5Vm8td8GdDqTK4MvRKi6mCijP254c7sRtTvYDLF3kngAuBosWUkGokz1qYLZSkNyrn send

Error:
   0: Pool #2 of slimedragon.near/xyk is a public pool, and only private pools can be locked
